testing out style

--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
       <title>Wayne's World</title>
 </head>
 <body>
-
+<div class="nav">
+      <div class="projects">
+          <div class="link">Hermes</div>
+          <div class="link">home-util</div>
+      </div>
+</div>
+<div class="text">
+    <h1>Wayne's World: A Collection of Projects</h1>
+</div>
 </body>
 </html>
