nav bar beginning

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 </head>
 <body>
 <div class="nav">
-      <div class="projects">
-          <div class="link">Hermes</div>
-          <div class="link">home-util</div>
-      </div>
+      <ul class="projects">
+          <li class="link"><a href="docs/Hermes.html">Hermes</a></li>
+          <li><a href="docs/home-util.html">home-util</a></li>
+      </ul>
 </div>
 <div class="text">
     <h1>Wayne's World: A Collection of Projects</h1>
