added project pages

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       <ul class="projects">
           <li class="link"><a href="docs/Hermes.html">Hermes</a></li>
           <li><a href="docs/home-util.html">home-util</a></li>
+          <li><a href="docs/szivr.html">SZIVR</a></li>
       </ul>
 </div>
 <div class="text">
